# LALAMOVE-Graduate-Tech-Challenge-21

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
llm/: __init__.py  main.py
tests/: test_llm.py
