[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Nikil Kumar <kumarnikil9865@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
llm = "llm.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
